# aries-vision-vlm-demo

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  clear-demo.desktop  docker-compose.gpu.yml  docker-compose.yml  download.bat  download.sh  run.sh  update.sh  vision-vlm-demo.desktop
backend_vision/: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  vision.Dockerfile
backend_vision/assets/config/: FeederSettingCam.yaml  FeederSetting_MLA100.yaml  LayoutSetting_MLA100.yaml  ModelSetting_MLA100.yaml
backend_vision/mxq/: yolo26s-weapon_uint8_input.mxq
backend_vision/rc/: FeederSetting_MLA100.yaml  LayoutSetting_MLA100.yaml  ModelSetting_MLA100.yaml
backend_vision/src/demo/: CMakeLists.txt  benchmarker.h  define.h  demo.cc  demo.h  feeder.cc  feeder.h  mjpeg_server.cc  mjpeg_server.h  model.cc  model.h  model_inference.cc  post.h  post_yolo11_det.cc  post_yolo11_det.h  yaml_util.cc
backend_vlm/: backend-gpu.Dockerfile  backend.Dockerfile  pyproject.toml
backend_vlm/src/: ImageTextToTextPipeline.py  server.py
frontend/: frontend.Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  settings.ts
frontend/app/components/: Answer.tsx  Chat.tsx  Dialog.tsx  LanguageSwitcher.tsx  ModelIcon.tsx  SystemMetricsModal.tsx  VisionStream.tsx  type.tsx
frontend/app/i18n/: en.json  ja.json  ko.json  zh.json
frontend/public/prompt-bundles/en/: system.txt
frontend/public/prompt-bundles/ja/: system.txt
frontend/public/prompt-bundles/ko/: system.txt
frontend/public/prompt-bundles/zh/: system.txt
